# pyEccentricFD

./: .gitignore  CMakeLists.txt  InspiralEccentricFD.c  InspiralEccentricFD.h  InspiralEccentricFDBasic.c  LALSimInspiralEccentricityFD.c  README.md  eccentric_fd.py  main.c  setup.py
include/: InspiralEccentricFD.h
pyEccentricFD/: __init__.py  pyEccentricFD.py
src/: InspiralEccentricFD.c
tests/: py_eccfd_test.py  test.c
